--- a/package.json
+++ b/package.json
@@ -13,9 +13,17 @@
     "react-navigation": "^2.12.1"
   },
   "devDependencies": {
+    "babel-eslint": "^9.0.0",
     "babel-jest": "23.4.2",
     "babel-preset-react-native": "4.0.0",
+    "eslint": "^5.4.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-prettier": "^2.6.2",
+    "eslint-plugin-react": "^7.11.1",
     "jest": "23.5.0",
+    "prettier-eslint": "^8.8.2",
     "react-test-renderer": "16.3.1"
   },
   "jest": {
