--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,27 +1,28 @@
 {
-    "parser": "babel-eslint",
-    "extends": [
-        "airbnb"
+  "parser": "babel-eslint",
+  "extends": [
+    "airbnb"
+  ],
+  "plugins": [
+    "react",
+    "jsx-a11y",
+    "import",
+    "prettier"
+  ],
+  "rules": {
+    "linebreak-style": 0,
+    "comma-dangle": 0,
+    "no-console": 0,
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [
+          ".js",
+          ".jsx"
+        ]
+      }
     ],
-    "plugins": [
-        "react",
-        "jsx-a11y",
-        "import",
-        "prettier"
-    ],
-    "rules": {
-        "linebreak-style": 0,
-        "comma-dangle": 0,
-        "react/jsx-filename-extension": [
-            1,
-            {
-                "extensions": [
-                    ".js",
-                    ".jsx"
-                ]
-            }
-        ],
-        "react/jsx-one-expression-per-line": 0,
-        "react/prop-types": 0
-    }
+    "react/jsx-one-expression-per-line": 0,
+    "react/prop-types": 0
+  }
 }
