Configured app signing for Android (.keystore file not committed to repo)

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,3 +18,8 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
+
+MYAPP_RELEASE_STORE_FILE=sevin-release-key.keystore
+MYAPP_RELEASE_KEY_ALIAS=sevin-key
+MYAPP_RELEASE_STORE_PASSWORD=sevin123
+MYAPP_RELEASE_KEY_PASSWORD=sevin123
